--- a/views/main.hbs
+++ b/views/main.hbs
@@ -100,6 +100,8 @@
   <div class="row content">
     <div class="col-sm-2 sidenav">
       <a href="/list_user" ><div class="menu">Daftar User</div></a>
+      <a href="/list_materi" ><div class="menu">Daftar Materi</div></a>
+      <a href="/list_materi_assign" ><div class="menu">Daftar Materi Assign</div></a>
       <a href="/profile" ><div class="menu">Profile</div></a>
       {{#if is_admin}}
       <a href="/setting"><div class="menu">Setting</div></a>  
@@ -109,7 +111,9 @@
     
     <div class="col-sm-8 text-left">    
   	{{#if list_user}} 
-           {{> list_user_view}}		 
+           {{> list_user_view}}
+        {{else if list_materi}}
+           {{> list_materi_view}}		 
 	{{else if profile}}  
            {{> profile_view}}		 
 	{{else if setting}} 
