--- a/views/partials/list_discussion_view.hbs
+++ b/views/partials/list_discussion_view.hbs
@@ -36,7 +36,7 @@
 	         {{#each data}}          
 	        <tr>
 	          <td>{{id}}</td>    
-	          <td>{{materi}}</td>  
+	          <td><a href="list_discussion_comment/{{id}}">{{materi}}</a></td>  
 	          <td>{{posted_by}}</td>  
 	          <td>{{create_date}}</td>
 	          {{#if is_admin}}
