--- a/views/partials/list_materi_assign_view.hbs
+++ b/views/partials/list_materi_assign_view.hbs
@@ -35,7 +35,7 @@
 	         {{#each data}}          
 	        <tr>
 	          <td>{{id}}</td>    
-	          <td><a href="list_materi_assign/{{id}}">{{name}}</a></td>  
+	          <td>{{fullname}}</td>  
 	          <td>{{create_date}}</td>
 	          {{#if is_admin}}
 	          <td>  
