--- a/views/partials/list_discussion_comment_view.hbs
+++ b/views/partials/list_discussion_comment_view.hbs
@@ -14,7 +14,7 @@
   
   <div class="container-fluid">
 
-   <h3> Daftar Materi</h3>
+   <h3> Daftar Komentar</h3>
   
   
 	<div class="row">
@@ -23,7 +23,8 @@
 	      <thead>
 	        <tr>          
 	          <th>ID</th> 
-	          <th>Name</th>
+	          <th>Commentar</th>
+	          <th>Posted by</th>
 	          <th>Tanggal Pembuatan</th>  
 	          {{#if is_admin}}
 	            <th>Action</th>
@@ -35,8 +36,9 @@
 	         {{#each data}}          
 	        <tr>
 	          <td>{{id}}</td>    
-	          <td><a href="list_materi_assign/{{id}}">{{name}}</a></td>  
-	          <td>{{create_date}}</td>
+	          <td>{{comment}}</td>  
+	          <td>{{fullname}}</td>  
+	          <td>{{created_date}}</td>
 	          {{#if is_admin}}
 	          <td>  
 	            <a href="javascript:void(0);" class="btn btn-sm btn-info edit" data-id="{{id}}" 
