--- a/views/partials/list_exam_view.hbs
+++ b/views/partials/list_exam_view.hbs
@@ -14,7 +14,7 @@
   
   <div class="container-fluid">
 
-   <h3> Daftar Materi</h3>
+   <h3> Daftar Kuis</h3>
   
   
 	<div class="row">
@@ -23,7 +23,8 @@
 	      <thead>
 	        <tr>          
 	          <th>ID</th> 
-	          <th>Name</th>
+	          <th>Name Kuis</th>	        
+	          <th>Nama Materi</th>
 	          <th>Tanggal Pembuatan</th>  
 	          {{#if is_admin}}
 	            <th>Action</th>
@@ -34,8 +35,9 @@
 	      <tbody id="bodytable">
 	         {{#each data}}          
 	        <tr>
-	          <td>{{id}}</td>    
-	          <td><a href="list_materi_assign/{{id}}">{{name}}</a></td>  
+	          <td>{{exam_id}}</td>    
+	          <td>{{name_exam}}</td>  	          
+	          <td>{{name_materi}}</td>  
 	          <td>{{create_date}}</td>
 	          {{#if is_admin}}
 	          <td>  
