--- a/views/partials/list_exam_view.hbs
+++ b/views/partials/list_exam_view.hbs
@@ -36,7 +36,7 @@
 	         {{#each data}}          
 	        <tr>
 	          <td>{{exam_id}}</td>    
-	          <td>{{name_exam}}</td>  	          
+	          <td><a href="list_exam_detail/{{exam_id}}">{{name_exam}}</a></td>  	          
 	          <td>{{name_materi}}</td>  
 	          <td>{{create_date}}</td>
 	          {{#if is_admin}}
