update login dan assign materi

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -43,6 +43,7 @@
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit">
 			</form>
+			<div>{{message}}</div>
 		</div>
 	</body>
 </html>
