--- a/views/partials/list_materi_assign_view.hbs
+++ b/views/partials/list_materi_assign_view.hbs
@@ -14,7 +14,7 @@
   
   <div class="container-fluid">
 
-   <h3> Daftar Materi</h3>
+   <h3> Daftar Materi, {{materi_owner}}</h3>
   
   
 	<div class="row">
@@ -23,49 +23,63 @@
 	      <thead>
 	        <tr>          
 	          <th>ID</th> 
-	          <th>Name</th>
-	          <th>Tanggal Pembuatan</th>  
-	          {{#if is_admin}}
-	            <th>Action</th>
-	          {{/if}}   
-	          
+	          <th>Name Materi</th>
+	          <th>Materi Aktif</th>  	          
 	        </tr>
 	      </thead>
 	      <tbody id="bodytable">
 	         {{#each data}}          
 	        <tr>
 	          <td>{{id}}</td>    
-	          <td>{{fullname}}</td>  
-	          <td>{{create_date}}</td>
-	          {{#if is_admin}}
-	          <td>  
-	            <a href="javascript:void(0);" class="btn btn-sm btn-info edit" data-id="{{id}}" 
-	            data-name="{{name}}" data-code="{{code}}" data-parent_id="{{parent_id}}">Edit</a>
-	            <a href="javascript:void(0);" class="btn btn-sm btn-danger delete" data-id="{{id}}" data-name="{{name}}" >Delete</a> 
-	          </td>
-	          {{/if}}
+	          <td>{{materi_name}}</td>  
+	          <td><input class="form-check-input" data-id="{{id}}" data-assign="{{assign_id}}"  type="checkbox" value="" {{#if isactive}}checked{{/if}}> </td>	     
 	        </tr>
 	        {{/each}}
 	      </tbody>
 	    </table>
 	</div>
- 
-  	<div class="row" style="padding-bottom: 40px">
-  		<div class="col-sm-2">
-  			Total Page : <b id="totalPage">{{total_page}}</b>	 
-  		</div>
-  		<div class="col-sm-2">
-  			
-  		</div>
-  		<div class="col-sm-6">
-  			<ul id="pagination" class="pagination"/> 
-  		</div>
-  	</div>
-    
-    
+        
   </div>
  
+<script src="/assets/js/jquery-3.2.1.js"></script>  
+<script src="/assets/js/bootstrap.js"></script> 
+<script src="/assets/js/loadingModal.js"></script>  
+<script src="/assets/js/jquery-ui.js"></script>
+
   
+<script type="text/javascript">
+
+$(document).ready(function(){
+	$("#bodytable").on("change", "input[type=checkbox]", function(){
+		id = $(this).data("id");
+                assignId = $(this).data("assign");
+                accountId = "{{user_id}}";
+
+		if(assignId == ""){
+		    assignId = "-1";
+		}
+		
+		console.log("do save");
+		updateAssing(accountId, id, assignId, this.checked)
+	});
+	
+});
+
+function updateAssing(userId, materiId, assignId, isCheck){
+	path = "/api/update_materi_assign/"+userId+"/"+materiId+"/"+assignId+"/"+isCheck;
+	$.ajax({
+		dataType: "json",
+		url: path,
+		success: function(data){
+			alert("Success");
+		},
+		error: function(data){
+			alert("gagal");
+		}
+	});
+}
+
+</script>
 
 
 </body>
