--- a/views/partials/list_user_view.hbs
+++ b/views/partials/list_user_view.hbs
@@ -42,7 +42,7 @@
 	          <td>{{email}}</td>
 	          <td>{{username}}</td>  
 	          <td>{{password}}</td>
-                  <td><a href="/list_usage_user/{{id}}">detail</a></td>
+                  <td><a href="/list_usage_user/{{id}}">Lihat </a></td>
 	          <td><a href="/list_materi_assign/{{id}}/{{fullname}}" >Lihat</a> </td>
 	        </tr>
 	        {{/each}}
